--- a/views/app/admin.ejs
+++ b/views/app/admin.ejs
@@ -15,22 +15,10 @@
                 <div id='admin-body' class='page-body'>
                     <a href='/app/admin/users'>List Users</a><br>
                 </div>
-                <div id='user-body' class='page-body'>
-                    You are not an Admin<br>
-                </div>
             </div>
          </div>
     </div></div></div>
+    <!-- SOLUTION : Condition, si l'user n'est pas admin il sera redirigé -->
     <% include ../common/footer %>
 </body>
-    <script>
-        var isAdmin = <%=admin%>;
-        if(!isAdmin){
-            var div = document.getElementById('admin-body');
-            div.style.display = "none";
-        }else{
-            var div = document.getElementById('user-body');
-            div.style.display = "none";            
-        }
-    </script>
 </html>
